add_executable(ft-generator
	calendar.cpp
	config/commandlineargs.cpp
	config/common.cpp
	config/config.cpp
	config/encapsulation.cpp
	config/ipv4.cpp
	config/ipv6.cpp
	config/mac.cpp
	flow.cpp
	flowplanhelper.cpp
	flowprofile.cpp
	generator.cpp
	generators/addressgenerators.cpp
	generators/common.cpp
	generators/ipv4addressgenerator.cpp
	generators/ipv6addressgenerator.cpp
	generators/lfsr.cpp
	generators/macaddressgenerator.cpp
	generators/multirangegenerator.cpp
	generators/prefixedgenerator.cpp
	layer.cpp
	layers/ethernet.cpp
	layers/icmpecho.cpp
	layers/icmprandom.cpp
	layers/icmpv6echo.cpp
	layers/icmpv6random.cpp
	layers/ipv4.cpp
	layers/ipv6.cpp
	layers/mpls.cpp
	layers/payload.cpp
	layers/tcp.cpp
	layers/udp.cpp
	layers/vlan.cpp
	main.cpp
	packet.cpp
	packetflowspan.cpp
	pcapwriter.cpp
	pcppethlayer.cpp
	pcpppacket.cpp
	randomgenerator.cpp
	timeval.cpp
	trafficmeter.cpp
	packetsizegeneratorslow.cpp
)

target_link_libraries(ft-generator
	PRIVATE
	pcapplusplus::common
	pcapplusplus::packet
	pcapplusplus::pcap
	common
	yaml-cpp
	stdc++fs
)

install(TARGETS ft-generator DESTINATION ${INSTALL_DIR_BIN})
